add mock ui for the game

--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <div id="main-content">
+      <div class="game-space">
+        <div class="board-list">
+          <div class="game-board"></div>
+          <div class="game-board"></div>
+        </div>
+        <div class="game-information"></div>
+      </div>
+    </div>
+  </body>
 </html>
