implement basic computer game and fix unit tests and player logic

--- a/src/template.html
+++ b/src/template.html
@@ -8,10 +8,7 @@
   <body>
     <div id="main-content">
       <div class="game-space">
-        <div class="board-list">
-          <div class="game-board"></div>
-          <div class="game-board"></div>
-        </div>
+        <div class="board-list"></div>
         <div class="game-information"></div>
       </div>
     </div>
