--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <div id="main-content">
       <div class="game-space">
         <div class="board-list"></div>
-        <div class="game-information"></div>
+        <div class="game-information"><div class="player-name-list"></div></div>
       </div>
     </div>
   </body>
