refactor mapper class and add event log

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,10 @@
     <div id="main-content">
       <div class="game-space">
         <div class="board-list"></div>
-        <div class="game-information"><div class="player-name-list"></div></div>
+        <div class="game-information">
+          <div class="player-name-list"></div>
+          <div class="event-log"></div>
+        </div>
       </div>
     </div>
   </body>
