add start game button and refactor ui mapping class

--- a/src/template.html
+++ b/src/template.html
@@ -11,6 +11,9 @@
         <div class="board-list"></div>
         <div class="game-information">
           <div class="player-name-list"></div>
+          <div class="button-list">
+            <button class="start-game-button">Start game</button>
+          </div>
           <div class="event-log"></div>
         </div>
       </div>
