add title and minor ui style change

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,9 @@
   <body>
     <div id="main-content">
       <div class="game-space">
-        <div class="board-list"></div>
+        <div class="board-list">
+          <div class="title">Battleship Mini</div>
+        </div>
         <div class="game-information">
           <div class="player-name-list"></div>
           <div class="game-form-container">
